@@ -22,7 +22,6 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 
    AutogsdocSource: NSArchiver.m
-
    AutogsdocSource: NSUnarchiver.m
 
    */ 
